[package]
name = "pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
mysql = "24.0.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_derive = "1.0.118"
toml = "0.8.0"
